# learn-actix

./: .devcontainer.json  Cargo.toml  alias.md  code-server.sh  escape.Dockerfile  expand.rs  feature.Dockerfile  flake.nix  image.nix  js.sh  notes.md  package.json  redirect.sh  setup.sh  term.html
.devcontainer/: devcontainer.json
example/: gpu.json  meta.json
features/: good.md  use-cache-volume.json
learn-actix/: Cargo.toml
learn-actix/src/: main.rs  mixin.rs
schema/: devContainer.base.schema.json  download.sh  example.devContainer.json  hashable-value.json  source.txt
site/: package.json
