[package]
name = "learn-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
actix-web = "4"
clap = "4"
clap_complete = "*"
#schemafy = "0.6.0"
schemafy = { git = "https://github.com/lizelive/schemafy.git", branch = "patch-2" }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.91"
shadow-rs = "*"

[build-dependencies]
shadow-rs = "*"
